samples/_failures_safe/1761224425_8dec3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7976bba4.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_7976bba4.c:147:39: error: missing terminating " character
  147 |         case STATE_PROCESSING: return "PROC
      |                                       ^~~~~
./samples/SAFE/__tmp_7976bba4.c:147:9: error: expected expression at end of input
  147 |         case STATE_PROCESSING: return "PROC
      |         ^~~~
./samples/SAFE/__tmp_7976bba4.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7976bba4.c:147:9: error: expected declaration or statement at end of input
